--- a/src/components/productMenu/productDetails/ProductDetails.module.css
+++ b/src/components/productMenu/productDetails/ProductDetails.module.css
@@ -21,9 +21,11 @@
 }
 
 .imgContainer {
+  height: 400px;
   position: relative;
   overflow: hidden;
-  display: block;
+  display: flex;
+  align-items: center;
   padding: 10px;
   border: 1px solid rgba(242, 165, 87, 0.6);
   border-radius: 6px;
